--- a/css/styles.css
+++ b/css/styles.css
@@ -10839,6 +10839,9 @@ p {
 
 .page-section {
   padding: 6rem 0;
+  background-image: ;
+
+
 }
 .page-section h2.section-heading, .page-section .section-heading.h2 {
   font-size: 2.5rem;
